[gd_scene load_steps=7 format=3 uid="uid://ud6r7ksbu3lm"]

[ext_resource type="Texture2D" uid="uid://cs3ngpney0awe" path="res://assets/qte/QTE_Progress_bar.png" id="1_lbcdu"]
[ext_resource type="Texture2D" uid="uid://c4g7tdpx5hyx3" path="res://assets/qte/QTE_Progress_bar_hollow.png" id="2_1k5uo"]
[ext_resource type="Texture2D" uid="uid://d0hm6v0vt776i" path="res://assets/qte/CollisionZoneFilled.png" id="2_e5op3"]
[ext_resource type="Script" uid="uid://c5fbrbdy2iy22" path="res://scripts/qte.gd" id="3_e5op3"]

[sub_resource type="BoxMesh" id="BoxMesh_7wat3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1k5uo"]
size = Vector2(0.878786, 0.909091)

[node name="QTE" type="Node2D"]
position = Vector2(146, 106)

[node name="Sprite2D2" type="Sprite2D" parent="."]
modulate = Color(0.129412, 0.129412, 0.129412, 0.631373)
texture = ExtResource("1_lbcdu")

[node name="qteZone" type="Sprite2D" parent="."]
modulate = Color(0.759888, 0, 0.186666, 0.537255)
light_mask = 1023
visibility_layer = 1023
rotation = 1.5708
texture = ExtResource("2_e5op3")

[node name="qteArea2D" type="Area2D" parent="qteZone"]
position = Vector2(-1.04907e-06, -24)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="qteZone/qteArea2D"]
position = Vector2(0, 24)
polygon = PackedVector2Array(-5, -32, -5, -31, -9, -31, -9, -30, -12, -30, -12, -29, -14, -29, -14, -28, -16, -28, -16, -27, -17, -27, -17, -26, -19, -26, -19, -25, -20, -25, -20, -23, -19, -23, -19, -22, -18, -22, -18, -21, -17, -21, -17, -20, -16, -20, -16, -19, -15, -19, -15, -18, -14, -18, -14, -17, -13, -17, -13, -16, -12, -16, -12, -15, -11, -15, -11, -14, -10, -14, -10, -13, -9, -13, -9, -12, -8, -12, -8, -13, -6, -13, -6, -14, -3, -14, -3, -15, 3, -15, 3, -14, 6, -14, 6, -13, 8, -13, 8, -12, 9, -12, 9, -13, 10, -13, 10, -14, 11, -14, 11, -15, 12, -15, 12, -16, 13, -16, 13, -17, 14, -17, 14, -18, 15, -18, 15, -19, 16, -19, 16, -20, 17, -20, 17, -21, 18, -21, 18, -22, 19, -22, 19, -23, 20, -23, 20, -25, 19, -25, 19, -26, 17, -26, 17, -27, 16, -27, 16, -28, 14, -28, 14, -29, 12, -29, 12, -30, 9, -30, 9, -31, 5, -31, 5, -32)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_1k5uo")

[node name="Rotating Indicator" type="Node2D" parent="."]
scale = Vector2(0.25, 1)
script = ExtResource("3_e5op3")
speed = 500.0

[node name="MeshInstance2D" type="MeshInstance2D" parent="Rotating Indicator"]
position = Vector2(0, -23.505)
scale = Vector2(16.5, 16.5)
mesh = SubResource("BoxMesh_7wat3")

[node name="StaticBody2D" type="Area2D" parent="Rotating Indicator/MeshInstance2D"]
position = Vector2(0, -4.76837e-07)
disable_mode = 2
collision_layer = 255
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rotating Indicator/MeshInstance2D/StaticBody2D"]
position = Vector2(0, 0.000303745)
shape = SubResource("RectangleShape2D_1k5uo")

[connection signal="area_entered" from="qteZone/qteArea2D" to="Rotating Indicator" method="_on_area_entered"]
[connection signal="area_exited" from="qteZone/qteArea2D" to="Rotating Indicator" method="_on_area_exited"]
[connection signal="body_entered" from="qteZone/qteArea2D" to="Rotating Indicator" method="_on_body_entered"]
